--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-advanced-http": "^2.0.4",
+    "cordova-sqlite-storage": "^3.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -35,5 +37,11 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-advanced-http": {}
+    }
+  }
 }
